--- a/ep10/create.html
+++ b/ep10/create.html
@@ -5,6 +5,6 @@
     <input type="text" ng-model="estado" placeholder="Digite um estado" />
     <input type="text" ng-model="capital" placeholder="Digite a capital" />
     <input type="submit" value="Incluir" />
-    <a href="#/states">Cancelar</a>
+    <a class="btn btn-ttc" href="#/states">Cancelar</a>
   </form>
 </p>
